# XMOJ-Client

./: .gitignore  .gitmodules  Build.bat  Build.sh  CMakeLists.txt  README.md  main.cpp
.github/workflows/: cmake-multi-platform.yml
Backend/: APIProceed.cpp  APIProceed.hpp  CMakeLists.txt  Server.cpp  Server.hpp  main.cpp
Backend/API/: API.hpp  APIResult.cpp  APIResult.hpp  GetProblem.cpp  GetProblem.hpp  GetSettings.cpp  GetSettings.hpp  Login.cpp  Login.hpp  SetSettings.cpp  SetSettings.hpp
Backend/Classes/: Problem.hpp  Problems.cpp  Problems.hpp  Settings.cpp  Settings.hpp  XMOJ.cpp  XMOJ.hpp
Backend/Database/: Database.cpp  Database.hpp  SQLCondition.cpp  SQLData.cpp  SQLDataType.cpp  SQLOrder.cpp
Backend/Libraries/mbedtls/docs/: requirements.txt
Backend/Utilities/: Assert.hpp  Logger.cpp  Logger.hpp  StringOperation.cpp  StringOperation.hpp  WebRequest.cpp  WebRequest.hpp
Classes/: Settings.cpp  Settings.hpp
Frontend/: CMakeLists.txt  MessagePipe.ts  package.json  webpack.config.js
Frontend/Interface/: BodyList.tsx  HeaderNavigation.tsx  Initiate.tsx  Load.tsx  PopupNotifications.tsx  PopupToast.tsx
Frontend/Interface/Contents/: Problem.tsx  Problems.tsx
Frontend/Static/: index.css
Server/: APIProceed.cpp  APIProceed.hpp  Server.cpp
Server/API/: API.cpp  API.hpp  GetSettings.cpp  GetSettings.hpp  Login.cpp  Login.hpp  SetSettings.cpp  SetSettings.hpp
Server/Static/: index.tsx  tsconfig.json  webpack.config.js
Server/Static/Interface/: BodyContent.tsx  BodyList.tsx  Header.tsx  HeaderBreadcrumb.tsx  Initiate.tsx  Load.tsx  PopupNotifications.tsx
Static/: API.ts  package.json  webpack.config.js
Static/HTML/: index.html
Static/Interface/: HeaderBreadcrumb.tsx  Load.tsx  PopupAction.tsx  PopupNotifications.tsx  PopupToast.tsx
Utilities/: Database.hpp  StringOperation.hpp  XMOJ.cpp  XMOJ.hpp
Utilities/Database/: SQLData.cpp  SQLOrder.cpp
